# leela-interp

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/leela_interp/: cli.py  cli_options.py  constants.py  data.py
src/leela_interp/extract/: __init__.py  figshare.py
src/leela_interp/tools/: activations.py
